k8s/entsoe-rs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: entsoe-service
spec:
  selector:
    app: entsoe-rs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
