k8s/entsoe-rs-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    cert-manager.io/issuer: "le-http"
spec:
  tls:
    - hosts:
        - api.educk.io
      secretName: tls-educk-ingress-http
  rules:
    - host: api.educk.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: entsoe-service
                port:
                  number: 3000
